Make threads/processes an ArrayList so they can be binary searched; Base for the kernel controller class.